--- a/index.css
+++ b/index.css
@@ -1,228 +1,145 @@
-/* body {
-    font-family: Arial, sans-serif;
+body {
     margin: 0;
+}
+
+main {
+    background-color: rgb(215, 244, 246);
+    padding: 2% 8%;
 }
 
 header {
-    position: relative;
-    width: 100%;
-    height: 80px;
+    border-bottom: 1px solid #dfe1e5;
+    box-shadow: 0 2px;
+}
+
+nav {
+    padding: 0 20px;
     box-sizing: border-box;
-    padding: 0px 16px;
-    margin-top: 0;
-}
-
-section {
-    position: relative;
-    margin: auto auto;
-    text-align: center;
-    height: 500px;
-}
-
-#container {
-    margin: 0;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    -ms-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-}
-
-#search_logo {
-    width: 272px;
-    height: 92px;
-}
-
-#search_input {
-    display: block;
-    margin: 20px;
-    width: 582px;
-    color: #222;
-    border-radius: 24px;
-    border: 1px solid #dfe1e5;
-    padding: 14px;
-    font-size: 13px;
-    background: url('https://www.gstatic.com/images/branding/googlemic/2x/googlemic_color_24dp.png') no-repeat;
-    background-size: 25px;
-    background-position: 560px center;
-}
-
-#search_input:hover {
-    box-shadow: 0 1px 6px 0 rgba(32, 33, 36, 0.28);
-}
-
-.button {
-    display: inline-block;
-    background-color: #f2f2f2;
-    color: #5F6368;
-    font-size: 14px;
-    height: 36px;
-    padding: 0 16px;
-    border: 1px solid transparent;
-    box-shadow: 0 1px 1px rgba(0, 0, 0, 0);
-}
-
-.button:hover {
-    background-image: linear-gradient(top, #f8f8f8, #f1f1f1);
-    border: 1px solid #c6c6c6;
-    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
-    color: #222;
-    cursor: pointer;
-}
-
-nav {
-    position: absolute;
-    top: 50%;
-    right: 0;
-    -ms-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-}
-
-.nav_span {
-    float: center;
-    text-align: center;
-    font-size: 13px;
-    color: rgba(0, 0, 0, 0.87);
-    padding: 28px 5px;
-}
-
-.nav_span:hover {
-    text-decoration: underline;
-}
-
-#profile {
-    width: 32px;
-    height: 32px;
-} */
-
-body {
-    font-family: Arial, sans-serif;
-    padding: 0 16px;
-}
-
-nav {
-    text-align: right;
+    text-align: left;
 }
 
 .menu-item {
-    font-size: 13px;
+    font-size: 16px;
     color: rgba(0, 0, 0, 0.87);
-    text-decoration: none;
     position: relative;
-    top: -16px;
-    margin-right: 16px;
+    top: -8px;
+    margin-right: 8px;
+    text-decoration: none;
 }
 
 .menu-item:hover {
     text-decoration: underline;
 }
 
-#dropdown-wrapper {
+#logo {
     display: inline-block;
-}
-
-#dropdown-wrapper:hover #app-dropdown {
-    display: block;
-}
-
-#dropdown-menu {
-    position: relative;
-    top: -8px;
-    margin-right: 16px;
-}
-
-#profile-pic {
-    width: 48px;
-    height: 48px;
+    color: #0086ff;
+    font-size: 32px;
+    letter-spacing: -1px;
+    font-weight: 900;
+    font-family: 'Raleway', sans-serif;
+    margin-right: 48px;
 }
 
 section {
-    text-align: center;
-    padding-top: 12%;
-}
-
-#input-wrapper {
-    position: relative;
-    width: 582px;
     display: inline-block;
-}
-
-#search-box {
-    width: 100%;
-    color: #222;
-    border: 1px solid #dfe1e5;
-    font-size: 13px;
-    padding: 16px;
-    border-radius: 24px;
-    outline: none;
-    margin: 24px 0;
-}
-
-#search-box:hover,
-#search-box:focus {
-    box-shadow: 0 1px 6px 0 rgba(32, 33, 36, 0.28);
-    border-color: rgba(223, 225, 229, 0);
-}
-
-#input-wrapper>img {
-    position: absolute;
-    right: 0;
-    top: 32px;
-    width: 28px;
-}
-
-.custom-btn {
-    background-color: #f2f2f2;
-    color: #5F6368;
-    font-size: 14px;
-    height: 36px;
-    padding: 0 16px;
-    background-image: linear-gradient(top, #f5f5f5, #f1f1f1);
-    border: 1px solid transparent;
-    box-shadow: 0 1px 1px rgba(0, 0, 0, 0);
-    color: #222;
-}
-
-.custom-btn:hover {
-    background-image: linear-gradient(top, #f8f8f8, #f1f1f1);
-    border: 1px solid #c6c6c6;
-    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
-    color: #222
-}
-
-.custom-btn:first-of-type {
-    margin-right: 16px;
-}
-
-#app-dropdown {
-    width: 285px;
-    padding: 28px;
-    border: 1px solid #ccc;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
-    position: absolute;
-    right: 100px;
-    display: none;
-}
-
-#app-item {
-    display: inline-block;
-    width: 84px;
-    margin-bottom: 18px;
     text-align: center;
-}
-
-#app-item:hover {
-    border: 1px solid rgba(0, 0, 0, 0.2);
+    width: 70%;
+    margin-right: 24px;
+    background-color: white;
     border-radius: 8px;
+    box-shadow: 0 2px 5px #aaa;
 }
 
-#app-item>img {
-    width: 50px;
-    height: 50px;
+.desc-wrapper h1 {
+    font-size: 36px;
+    text-align: center;
 }
 
-#app-item>p {
-    color: rgba(0, 0, 0, 0.87);
-    margin: 0;
-    padding-top: 8px;
+.desc-wrapper p {
+    font-size: 20px;
+    text-align: left;
+    line-height: 1.3;
+    padding: 16px;
+}
+
+#header-img {
+    width: 100%;
+    max-width: 1100px;
+    height: 100%;
+    max-height: 480px;
+}
+
+aside {
+    display: inline-block;
+    width: 25%;
+    vertical-align: top;
+    background-color: white;
+    padding: 16px;
+    border-radius: 8px;
+    box-sizing: border-box;
+    box-shadow: 0 2px 5px #aaa;
+}
+
+.place-wrapper {
+    width: 100%;
+    border-bottom: 1px solid #aaa;
+    margin-bottom: 16px;
+}
+
+.place-wrapper img {
+    width: 100%;
+}
+
+.place-wrapper p {
+    font-size: 18px;
+    text-align: center;
+}
+
+.place-wrapper:last-of-type {
+    border-bottom: 0;
+}
+
+@media screen and (max-width: 768px) {
+    nav {
+        text-align: center;
+    }
+
+    main {
+        padding: 4%;
+    }
+
+    #logo {
+        display: block;
+        margin-right: 0px;
+        margin-bottom: 12px;
+    }
+
+    .menu-item {
+        font-size: 18px;
+        display: inline-block;
+        margin-top: 12px;
+    }
+
+    .menu-item:last-of-type {
+        margin-right: 0px;
+    }
+
+    section {
+        display: block;
+        width: 100%
+    }
+
+    .desc-wrapper h1 {
+        font-size: 24px;
+    }
+
+    .desc-wrapper p {
+        font-size: 18px;
+    }
+
+    aside {
+        display: block;
+        width: 100%;
+    }
 }
