--- a/index.css
+++ b/index.css
@@ -1,10 +1,6 @@
 body {
     margin: 0;
-}
-
-main {
-    background-color: rgb(215, 244, 246);
-    padding: 2% 8%;
+    padding: 16px;
 }
 
 header {
@@ -13,22 +9,40 @@ header {
 }
 
 nav {
-    padding: 0 20px;
-    box-sizing: border-box;
-    text-align: left;
+    display: flex;
+    justify-content: space-between;
+}
+
+#left-menu {
+    display: flex;
+    align-items: center;
+}
+
+#right-menu {
+    display: flex;
+    align-items: center;
 }
 
 .menu-item {
     font-size: 16px;
     color: rgba(0, 0, 0, 0.87);
-    position: relative;
-    top: -8px;
     margin-right: 8px;
     text-decoration: none;
 }
 
 .menu-item:hover {
     text-decoration: underline;
+}
+
+#profile-pic {
+    width: 48px;
+    height: 48px;
+}
+
+#notification-icon {
+    width: 20px;
+    height: 22px;
+    margin: 0 16px;
 }
 
 #logo {
@@ -38,108 +52,77 @@ nav {
     letter-spacing: -1px;
     font-weight: 900;
     font-family: 'Raleway', sans-serif;
-    margin-right: 48px;
+    margin-right: 32px;
+}
+
+#search-container {
+    position: relative;
+    width: 200px;
+    display: inline-block;
+}
+
+#search-box {
+    width: 100%;
+    color: #222;
+    border: 1px solid #dfe1e5;
+    font-size: 10px;
+    padding: 10px 2px;
+    border-radius: 24px;
+    outline: none;
+}
+
+#search-container>img {
+    position: absolute;
+    top: 5px;
+    right: 0;
+    width: 28px;
+}
+
+/* 
+
+Body styling
+
+*/
+
+main {
+    padding: 4% 0;
+    box-sizing: border-box;
+    max-width: 1200px;
+    margin: auto;
 }
 
 section {
-    display: inline-block;
-    text-align: center;
-    width: 70%;
-    margin-right: 24px;
-    background-color: white;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    width: 100%;
+}
+
+.blog-card {
+    width: 23%;
+    min-width: 200px;
+    height: auto;
     border-radius: 8px;
     box-shadow: 0 2px 5px #aaa;
+    margin: 10px;
 }
 
-.desc-wrapper h1 {
-    font-size: 36px;
-    text-align: center;
+.blog-card:hover {
+    box-shadow: 0 5px 10px #aaa;
 }
 
-.desc-wrapper p {
-    font-size: 20px;
-    text-align: left;
-    line-height: 1.3;
+.blog-image {
+    width: 100%;
+    border-top-left-radius: 8px;
+    border-top-right-radius: 8px;
+}
+
+.blog-heading {
+    margin: 0;
     padding: 16px;
-}
-
-#header-img {
-    width: 100%;
-    max-width: 1100px;
-    height: 100%;
-    max-height: 480px;
-}
-
-aside {
-    display: inline-block;
-    width: 25%;
-    vertical-align: top;
-    background-color: white;
-    padding: 16px;
-    border-radius: 8px;
-    box-sizing: border-box;
-    box-shadow: 0 2px 5px #aaa;
-}
-
-.place-wrapper {
-    width: 100%;
-    border-bottom: 1px solid #aaa;
-    margin-bottom: 16px;
-}
-
-.place-wrapper img {
-    width: 100%;
-}
-
-.place-wrapper p {
-    font-size: 18px;
-    text-align: center;
-}
-
-.place-wrapper:last-of-type {
-    border-bottom: 0;
-}
-
-@media screen and (max-width: 768px) {
-    nav {
-        text-align: center;
-    }
-
-    main {
-        padding: 4%;
-    }
-
-    #logo {
-        display: block;
-        margin-right: 0px;
-        margin-bottom: 12px;
-    }
-
-    .menu-item {
-        font-size: 18px;
-        display: inline-block;
-        margin-top: 12px;
-    }
-
-    .menu-item:last-of-type {
-        margin-right: 0px;
-    }
-
-    section {
-        display: block;
-        width: 100%
-    }
-
-    .desc-wrapper h1 {
-        font-size: 24px;
-    }
-
-    .desc-wrapper p {
-        font-size: 18px;
-    }
-
-    aside {
-        display: block;
-        width: 100%;
-    }
+    font-size: 16px;
+    font-family: 'Raleway', sans-serif;
+    background-color: lightcyan;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
