Add : Responsive website added

--- a/index.css
+++ b/index.css
@@ -1,21 +1,27 @@
 body {
     margin: 0;
-    padding: 16px;
+    font-family: 'Poppins', sans-serif;
 }
 
 header {
-    border-bottom: 1px solid #dfe1e5;
-    box-shadow: 0 2px;
+    background: url('https://edyoda.s3.ap-south-1.amazonaws.com/public/landing-background.png');
+    background-size: cover;
+    width: 100%;
+    height: 100vh;
+    background-position: left;
 }
 
+/** styling of the nac bar */
 nav {
+    background-color: white;
+    width: 100%;
+    height: 77px;
     display: flex;
     justify-content: space-between;
-}
-
-#left-menu {
-    display: flex;
     align-items: center;
+    padding: 0 28px;
+    box-sizing: border-box;
+    position: fixed;
 }
 
 #right-menu {
@@ -23,106 +29,613 @@ nav {
     align-items: center;
 }
 
-.menu-item {
-    font-size: 16px;
-    color: rgba(0, 0, 0, 0.87);
-    margin-right: 8px;
+.dropdown-wrapper {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown {
+    width: 150px;
+    border-top: 2px solid rgb(170, 210, 54);
+    box-shadow: 0 2px 5px #ccc;
+    font-size: 18px;
+    background-color: white;
+    position: absolute;
+    right: 32px;
+    display: none;
+    padding: 20px;
+}
+
+.dropdown a {
+    border-bottom: 1px solid #ccc;
+    display: block;
     text-decoration: none;
+    padding: 6px;
 }
 
-.menu-item:hover {
-    text-decoration: underline;
+.dropdown a:last-of-type {
+    border-bottom: none;
 }
 
-#profile-pic {
-    width: 48px;
-    height: 48px;
-}
-
-#notification-icon {
-    width: 20px;
-    height: 22px;
-    margin: 0 16px;
+.dropdown-wrapper:hover .dropdown {
+    display: block;
 }
 
 #logo {
-    display: inline-block;
-    color: #0086ff;
-    font-size: 32px;
-    letter-spacing: -1px;
-    font-weight: 900;
-    font-family: 'Raleway', sans-serif;
-    margin-right: 32px;
+    width: 40px;
 }
 
-#search-container {
-    position: relative;
-    width: 200px;
-    display: inline-block;
+.menu-item {
+    text-decoration: none;
+    color: black;
+    font-weight: 600;
+    font-size: 14px;
+    margin-right: 24px;
+    cursor: pointer;
 }
 
-#search-box {
+#right-menu button,
+#btn-submit {
+    font-size: 12px;
+    font-weight: 600;
+    color: white;
+    background-color: rgb(170, 210, 54);
+    padding: 9px 34px;
+    border: none;
+    border-radius: 4px;
+    margin-right: 24px;
+    text-transform: uppercase;
+}
+
+.landing-section {
     width: 100%;
-    color: #222;
-    border: 1px solid #dfe1e5;
-    font-size: 10px;
-    padding: 10px 2px;
-    border-radius: 24px;
-    outline: none;
+    height: 100vh;
 }
 
-#search-container>img {
-    position: absolute;
-    top: 5px;
-    right: 0;
-    width: 28px;
+#main-text-wrapper {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
-/* 
+#main-text-wrapper h1 {
+    width: 100%;
+    max-width: 1100px;
+    font-size: 44px;
+    font-weight: 600;
+    letter-spacing: 8.8px;
+    line-height: 1.2;
+    text-align: center;
+    margin: 0;
+}
 
-Body styling
+#main-text-wrapper p {
+    width: 100%;
+    max-width: 1100px;
+    font-size: 14px;
+    letter-spacing: 0.5px;
+    font-weight: 400;
+    color: #8b8b99;
+    text-align: center;
+    padding-top: 32px;
+}
 
-*/
+#steps-section {
+    width: 100%;
+    display: flex;
+    justify-content: stretch;
+}
 
-main {
-    padding: 4% 0;
+.step-item {
+    width: 25%;
+    text-align: center;
+    padding: 112px 48px;
+    color: white;
     box-sizing: border-box;
-    max-width: 1200px;
+
+}
+
+.step-item i {
+    font-size: 96px;
+    transform: scale(1);
+    transition-property: transform;
+    transition-duration: 1s;
+}
+
+.step-item i:hover {
+    transform: scale(1.1, 1.1);
+}
+
+.step-item h3 {
+    font-weight: 600;
+    font-size: 24px;
+}
+
+.step-item p {
+    font-size: 14px;
+    letter-spacing: 0.5px;
+    line-height: 1.6;
+}
+
+#first-step {
+    background-color: #5acda6;
+}
+
+#second-step {
+    background-color: #91ac41;
+}
+
+#third-step {
+    background-color: #e4b476;
+}
+
+#fourth-step {
+    background-color: #f69dad;
+}
+
+#store-section {
+    background-color: #f7eee2;
+    width: 100%;
+    padding: 75px 0;
+    text-align: center;
+}
+
+#fresh-food-heading,
+#testimonials-heading,
+.green-heading {
+    color: #91ac41;
+    font-family: 'Caveat', cursive;
+    font-size: 24px;
+    margin: 0;
+    margin-top: 35px;
+}
+
+#store-section>h3,
+#testimonials-section>h3,
+.section-heading {
+    font-size: 44px;
+    font-weight: 600;
+    margin: 0;
+    margin-bottom: 10px;
+}
+
+#store-description,
+#testimonials-desc {
+    font-size: 16px;
+    font-weight: 500;
+    color: #8b8b99;
+    letter-spacing: 0.5px;
+    margin: 0 auto;
+    max-width: 700px;
+    margin-bottom: 55px;
+}
+
+#store-items-wrapper {
+    width: 100%;
+    max-width: 1140px;
+    display: flex;
+    justify-content: stretch;
     margin: auto;
 }
 
-section {
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    width: 100%;
+.store-item {
+    width: 25%;
+    padding: 24px;
 }
 
-.blog-card {
-    width: 23%;
-    min-width: 200px;
-    height: auto;
-    border-radius: 8px;
-    box-shadow: 0 2px 5px #aaa;
-    margin: 10px;
+.icon-wrapper {
+    display: inline-block;
+    padding: 40px;
+    background-color: #e3b375;
+    border-radius: 50%;
+    transform: scale(1);
+    transition-property: transform;
+    transition-duration: 0.3s;
 }
 
-.blog-card:hover {
-    box-shadow: 0 5px 10px #aaa;
+.icon-wrapper:hover {
+    transform: scale(1.1);
 }
 
-.blog-image {
-    width: 100%;
-    border-top-left-radius: 8px;
-    border-top-right-radius: 8px;
+.icon-wrapper i {
+    color: white;
+    font-size: 60px;
 }
 
-.blog-heading {
-    margin: 0;
-    padding: 16px;
+.item-heading {
+    font-size: 24px;
+    font-weight: 600;
+}
+
+.item-description {
     font-size: 16px;
-    font-family: 'Raleway', sans-serif;
-    background-color: lightcyan;
-    overflow: hidden;
-    text-overflow: ellipsis;
+    letter-spacing: 00.5px;
+    font-weight: 500;
+    color: #8b8b99;
+}
+
+#testimonials-section {
+    text-align: center;
+    padding: 75px 0;
+}
+
+#testimonials-wrapper {
+    text-align: center;
+    display: flex;
+    justify-content: stretch;
+    width: 100%;
+    max-width: 1140px;
+    margin: 0 auto;
+    align-items: center;
+}
+
+.testimonial-item {
+    padding: 40px 30px;
+    margin: 16px;
+    width: 25%;
+    text-align: center;
+    background-color: #f5f6fb;
+    border-top-left-radius: 45px;
+    border-bottom-left-radius: 45px;
+    border-bottom-right-radius: 45px;
+}
+
+.testimonial-item img {
+    border-radius: 50%;
+    width: 80px;
+}
+
+.testionial-message {
+    font-size: 14px;
+    font-style: italic;
+    color: #8b8b99;
+    letter-spacing: 0.5px;
+}
+
+.testimonial-by {
+    font-weight: 600;
+    font-size: 16px;
+    color: black;
+    text-transform: uppercase;
+    margin: 0;
+    margin-top: 24px;
+}
+
+.job-role {
+    font-size: 12px;
+    font-style: italic;
+    color: #8b8b99;
+}
+
+#follow-section {
+    display: flex;
+    justify-content: stretch;
+}
+
+#left-section {
+    width: 67%;
+    display: inline-block;
+    margin: 0;
+}
+
+#right-section {
+    width: 33.33%;
+    background: url('https://edyoda.s3.ap-south-1.amazonaws.com/public/strawberry-white.png');
+    background-size: cover;
+    background-position: left;
+    margin: 0;
+}
+
+#left-section img {
+    width: 100%;
+}
+
+#text-wrapper {
+    margin: 115px;
+}
+
+#text-wrapper h3 {
+    font-weight: 600;
+    font-size: 44px;
+    margin: 0;
+    margin-bottom: 8px;
+}
+
+#text-wrapper p {
+    font-size: 16px;
+    font-weight: 500;
+    margin: 0;
+    line-height: 1.6;
+    color: #8b8b99;
+}
+
+#subscribe-email {
+    display: block;
+    box-sizing: border-box;
+    width: 100%;
+    font-weight: 500;
+    margin-top: 60px;
+    font-size: 16px;
+    padding: 12px;
+    border: 0;
+    outline: none;
+    color: #8b8b99;
+    border-radius: 4px;
+}
+
+#subscribe-btn {
+    display: block;
+    box-sizing: border-box;
+    font-weight: 500;
+    font-size: 14px;
+    border: 0;
+    border-radius: 4px;
+    padding: 16px 38px;
+    background-color: #f69dad;
+    color: white;
+    text-transform: uppercase;
+    margin-top: 16px;
+}
+
+#stats-wrapper {
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+    background-color: rgb(235, 251, 235);
+    padding: 100px 100px;
+    margin: 0 auto;
+    margin-top: 32px;
+    width: 100%;
+    max-width: 1140px;
+    justify-content: stretch;
+    text-align: center;
+}
+
+.stats-item {
+    padding: 0 64px;
+}
+
+.stats-item h3 {
+    font-size: 44px;
+    font-weight: 600px;
+    margin: 0;
+}
+
+.stats-item p {
+    font-size: 14px;
+    font-style: italic;
+    color: #57e3b5;
+    margin: 0;
+    margin-top: 10px;
+    text-transform: capitalize;
+}
+
+#video-section {
+    display: block;
+}
+
+#video-section>div {
+    width: 100%;
+    max-width: 1140px;
+    text-align: center;
+    margin: 0 auto;
+}
+
+#video-section h3 {
+    display: block;
+    color: #8b8b99;
+    font-weight: 400;
+    font-size: 44px;
+}
+
+#line-separator {
+    width: 96px;
+    background-color: #e4b476;
+    height: 1px;
+    margin-bottom: 36px;
+    display: inline-block;
+}
+
+#video-section iframe {
+    display: block;
+    margin: 0 auto;
+    width: 100%;
+    height: 425px;
+}
+
+#address-section {
+    display: block;
+
+}
+
+#address-wrapper {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    max-width: 1140px;
+    margin: 0 auto;
+    padding: 100px 0;
+}
+
+#address-wrapper>div {
+    width: 45%;
+}
+
+.section-description {
+    font-size: 16px;
+    font-weight: 500;
+    color: #8b8b99;
+    letter-spacing: 0.5px;
+}
+
+.address-lines {
+    font-size: 16px;
+    font-weight: 400;
+    color: #8b8b99;
+    letter-spacing: 0.5px;
+    line-height: 2;
+    margin: 0;
+}
+
+.address-heading {
+    font-size: 24px;
+    font-weight: 600;
+    margin: 0;
+    margin-top: 32px;
+}
+
+.input-box {
+    display: block;
+    width: 100%;
+    box-sizing: border-box;
+    padding: 15px;
+    font-size: 16px;
+    color: #8b8b99;
+    margin-bottom: 16px;
+    border-radius: 6px;
+    border: 1px solid #e5e6ec;
+    outline: none;
+}
+
+#btn-submit {
+    font-size: 16px;
+}
+
+footer {
+    width: 100%;
+    display: block;
+    text-align: center;
+    margin: auto;
+    color: white;
+    padding: 30px 0;
+    font-size: 16px;
+    letter-spacing: 0.5px;
+    background-color: #232323;
+}
+
+/** Responsive CSS */
+@media (max-width: 900px) {
+    .menu-item {
+        display: none;
+    }
+
+    #right-menu button {
+        margin-right: 0;
+    }
+
+    #main-text-wrapper>h1 {
+        font-size: 28px;
+    }
+
+    #main-text-wrapper>p {
+        padding: 16px;
+        box-sizing: border-box;
+    }
+
+    #steps-section {
+        flex-direction: column;
+        width: 100%;
+    }
+
+    .step-item {
+        width: 100%;
+    }
+
+    #store-items-wrapper {
+        flex-direction: column;
+        text-align: center;
+    }
+
+    .store-item {
+        width: 100%;
+        box-sizing: border-box;
+    }
+
+    #testimonials-section {
+        padding: 16px;
+        box-sizing: border-box;
+    }
+
+    #testimonials-section>h3 {
+        font-size: 28px;
+    }
+
+    #testimonials-wrapper {
+        flex-direction: column;
+    }
+
+    .testimonial-item {
+        width: 100%;
+        box-sizing: border-box;
+    }
+
+    .job-role {
+        font-size: 14px;
+    }
+
+    #follow-section {
+        flex-direction: column;
+    }
+
+    #left-section,
+    #right-section {
+        width: 100%;
+    }
+
+    #text-wrapper {
+        margin: 16px;
+    }
+
+    #right-section #text-wrapper h3 {
+        font-size: 28px;
+    }
+
+    #subscribe-btn {
+        margin: 0 auto;
+        margin-top: 10px;
+    }
+
+    #stats-wrapper {
+        grid-template-columns: auto;
+        justify-content: center;
+        align-items: center;
+        padding: 32px 0;
+    }
+
+    .stats-item {
+        padding: 10px 64px;
+    }
+
+    .stats-item p {
+        font-size: 20px;
+        margin-top: 5px;
+    }
+
+    #line-separator {
+        margin-bottom: 0px;
+    }
+
+    #video-section iframe {
+        height: 352px;
+    }
+
+    #address-wrapper {
+        padding: 50px 0;
+        flex-direction: column;
+        justify-content: start;
+        align-items: center;
+        padding: 16px;
+        padding-top: 0;
+        box-sizing: border-box;
+    }
+
+    #address-wrapper>div {
+        width: 100%;
+    }
+
+    footer {
+        font-size: 18px;
+    }
 }
